fix splash z-index

--- a/css/spalsh.css
+++ b/css/spalsh.css
@@ -7,6 +7,7 @@
   justify-content: center;
   align-items: center;
   transition: all 0.5s linear;
+  z-index: 1000;
 }
 
 .splash-logo {
